--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div in="content">
-       <h1>Elsö vedlapom</h1> 
-       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae earum quis expedita alias. Earum debitis sed minus, aliquam alias ea laborum quidem, voluptates ullam esse nostrum explicabo, eligendi eos quaerat.</p>
-    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, id blanditiis enim autem corrupti quo veniam accusamus alias facilis itaque nesciunt. Atque architecto quidem aliquid, facere dolorum natus explicabo ducimus.</span>
+    <h1>Elsö vedlapom</h1> 
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+     Repudiandae earum quis expedita alias. Earum debitis sed minus, 
+      aliquam alias ea laborum quidem, voluptates ullam esse nostrum explicabo, eligendi eos quaerat.</p>
+
+    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+     Eius, id blanditiis enim autem corrupti quo veniam accusamus alias facilis itaque nesciunt.
+      Atque architecto quidem aliquid, facere dolorum natus explicabo ducimus.</span>
    
 </div>
 
