--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel=perconnet" href="style.css">
+    <link rel="perconnet" href="">
 </head>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
 <body>
     <div in="content">
     <h1>Elsö vedlapom</h1> 
@@ -17,7 +21,7 @@
     <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
      Eius, id blanditiis enim autem corrupti quo veniam accusamus alias facilis itaque nesciunt.
       Atque architecto quidem aliquid, facere dolorum natus explicabo ducimus.</span>
-   
+   <img src="" alt="">
 </div>
 
 
